tdf#91671 avoid use of already disposed control

Change-Id: I9cf5feeb2fc0ea91c7684aaf8adc2809907fa5d7